# sync_calendars

./: .deepsource.toml  .dockerignore  .editorconfig  .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  app.py  celery_worker.py  config.py  docker-compose.yml  package-lock.json  package.json  setup.cfg  start.sh  webpack.config.js  wsgi.py
,github/workflows/: build-and-push.yml
.github/workflows/: build-and-push.yml
ansible/: main.yml
ansible/roles/app/defaults/: main.yml
ansible/roles/app/handlers/: main.yml
ansible/roles/app/tasks/: main.yml
ansible/roles/app/templates/: docker-compose.yml.j2  sync_cal.service.j2
migrations/versions/: 605af032c328_.py
sync_calendars/: __init__.py  app.py  config.py  extensions.py  models.py
sync_calendars/integrations/: __init__.py  o365_client.py
sync_calendars/routes/: api.py  auth.py  main.py  o365.py  views.py
sync_calendars/static/: app.css  app.js
sync_calendars/static/src/: app.css  app.js
sync_calendars/tasks/: __init__.py  calendar_tasks.py
sync_calendars/templates/: 400.html  404.html  500.html  home.html  home.html.j2  index.html  index.html.j2
tests/: conftest.py  test_calendar_tasks.py
