[metadata]
name = sync_calendars
version = 1.0.0
url = https://github.com/smurfpandey/sync_calendars
license = MIT
maintainer = Neeraj Verma
maintainer_email = github@smurfpandey.me

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    sync_calendars